--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
     restart: always
   odoo13-webserver:
     container_name: odoo13-webserver
-    #image: odoo:13
-    build: .
+    image: odoo:13
+    #build: .
     depends_on:
       - db
     ports:
