--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "${POSTGRES_PORT}:5432"
     volumes:
-        - ./postgresql:/var/lib/postgresql/data
+        - odoo-db:/var/lib/postgresql/data
     restart: always
   odoo13-webserver:
     container_name: server-odoo
@@ -26,7 +26,7 @@ services:
     volumes:
       - ./addons:/mnt/extra-addons
       - ./etc:/etc/odoo
-      - ./filestore:/var/lib/odoo/filestore
+      - odoo-data:/var/lib/odoo
     restart: always
 networks:
     default:
