--- a/.env.local
+++ b/.env.local
@@ -2,5 +2,5 @@ POSTGRES_PASSWORD=odoo
 POSTGRES_USER=odoo
 POSTGRES_DB=postgres
 
-POSTGRES_PORT=$POSTGRES_PORT_VALUE
-ODOO_PORT=$ODOO_PORT_VALUE
+POSTGRES_PORT=$POSTGRES_PORT
+ODOO_PORT=$ODOO_PORT
